Wordings on Scholarship page

--- a/scholarship/index.html
+++ b/scholarship/index.html
@@ -336,7 +336,7 @@
               <h3>Quick Links</h3>
               <ul class="unstyled">
                 <li><a href="#education">UCLA Division of Undergraduate Education </a></li>
-                <li><a href="#lettersScience">UCLA College of Letters and Sciences</a></li>
+                <li><a href="#lettersScience">UCLA College of Letters and Science</a></li>
                 <li><a href="#studentAffairs">UCLA Division of Student Affairs</a></li>
                 <li><a href="#centers">UCLA Centers and Associations</a></li>
                 <li><a href="#schools">UCLA Schools </a></li>
@@ -359,15 +359,15 @@
                 </div>
                 <p><a href="http://www.ugeducation.ucla.edu/honors/">Honors Programs</a></p>
                 <p><a href="http://www.ugeducation.ucla.edu/aap/">Academic Advancement Program</a></p>
-                <p><a href="http://www.ugeducation.ucla.edu/urhass">Undergraduate Resource Centers for Humanities and Social Sciences</a></p>
-                <p><a href="http://www.ugresearchsci.ucla.edu/">Undergraduate Resource Centers for Life and Physical Sciences</a></p>
+                <p><a href="http://www.ugeducation.ucla.edu/urhass">Undergraduate Research Centers for Humanities and Social Sciences</a></p>
+                <p><a href="http://www.ugresearchsci.ucla.edu/">Undergraduate Research Centers for Life and Physical Sciences</a></p>
                 <p><a href="http://www.ugeducation.ucla.edu/uei/">Undergraduate Education Initiatives</a></p>
                 <p><a href="http://www.ugeducation.ucla.edu/aap/cccp/">Center for Community College Partnerships</a></p>
                 <p><a href="http://www.ugeducation.ucla.edu/communitylearning/">Center for Community Learning</a></p>
 
                 <div id="lettersScience"></div>
                 <hr>
-                <h3>UCLA College of Letters and Sciences</h3>
+                <h3>UCLA College of Letters and Science</h3>
                 <p><a href="http://www.humanities.ucla.edu/home">Humanities</a></p> 
                 <p><a href="http://lifesciences.ucla.edu/">Life Science</a></p> 
                 <p><a href="http://www.physicalsciences.ucla.edu/">Physical Sciences</a></p> 
