--- a/merit/seniors/index.html
+++ b/merit/seniors/index.html
@@ -351,37 +351,37 @@
               <div class="scholarship-box"><!-- start -->
                 <div class="row-fluid">
                   <div class="span4"><a href="churchill.html">Churchill Scholarship</a></div>
-                  <div class="span8">For seniors or recent graduates interested in graduate study in Engineering, Mathematics, or Science at Cambridge University</div>
+                  <div class="span8">For Seniors or Recent Graduates interested in graduate study in Engineering, Mathematics, or Science at Cambridge University.</div>
                 </div> 
               </div><!-- end -->
               <div class="scholarship-box"><!-- start -->
                 <div class="row-fluid">
-                  <div class="span4"><a href="fashion.html">Fashion Scholarship Fund (FSF)</a></div>
-                  <div class="span8">The YMA Fashion Scholarship Fund (FSF) grants scholarships to talented students and facilitates internships, mentorships, and career programs. Open Students of any major with a demonstrated interest in fashion.</div>
+                  <div class="span4"><a href="fashion.html">Fashion Scholarship Fund</a></div>
+                  <div class="span8">The YMA Fashion Scholarship Fund (FSF) grants scholarships to talented students interested in fashion and facilitates internships, mentorships, and career programs in the fashion industry. Open to students in any major who have a demonstrated interest in fashion.</div>
                 </div> 
               </div><!-- end -->
               <div class="scholarship-box"><!-- start -->
                 <div class="row-fluid">
-                  <div class="span4"><a href="gates.html">Gates Cambridge Scholarships</a></div>
+                  <div class="span4"><a href="gates.html">Gates Cambridge Scholarship</a></div>
                   <div class="span8">Gates Cambridge Scholarships are prestigious, highly competitive full-cost scholarships. They are awarded to outstanding applicants from countries outside the UK to pursue a full-time postgraduate degree in any subject available at the University of Cambridge. </div>
                 </div> 
               </div><!-- end -->
               <div class="scholarship-box"><!-- start -->
                 <div class="row-fluid">
                   <div class="span4"><a href="david.html">Michel David-Weill Scholarship</a></div>
-                  <div class="span8">Outstanding UCLA Seniors are invited to apply for the Michel David-Weill Scholarship. The Scholarship supports an exceptional student to study for two years for a Master’s degree at Sciences-Po in Paris. </div>
+                  <div class="span8">For outstanding UCLA Seniors to study for two years for a Master’s degree at Sciences-Po in Paris.  Open to students in any field of study.</div>
                 </div> 
               </div><!-- end -->
               <div class="scholarship-box"><!-- start -->
                 <div class="row-fluid">
                   <div class="span4"><a href="jack.html">Jack Kent Cooke Scholarship</a></div>
-                  <div class="span8">Outstanding UCLA Seniors or recent graduates in all disciplines, who plan to pursue a graduate degree in the arts.</div>
+                  <div class="span8">For outstanding UCLA Seniors or Recent Graduates in all disciplines who plan to pursue a graduate degree in the Arts.</div>
                 </div> 
               </div><!-- end -->
               <div class="scholarship-box"><!-- start -->
                 <div class="row-fluid">
                   <div class="span4"><a href="james.html">James Madison Memorial Fellowship</a></div>
-                  <div class="span8">For Seniors or Recent Graduates who Plan Masters Degrees in American History, Political Science, Teaching or Education</div>
+                  <div class="span8">For Seniors or Recent Graduates who desire to become outstanding teachers of the American Constitution at the secondary school level.  Award is to complete an MA, MAT, or Med in American history, political science, government, or related studies.</div>
                 </div> 
               </div><!-- end -->
               <div class="scholarship-box"><!-- start -->
@@ -393,31 +393,31 @@
               <div class="scholarship-box"><!-- start -->
                 <div class="row-fluid">
                   <div class="span4"><a href="marshall.html">Marshall Scholarship</a></div>
-                  <div class="span8">Outstanding UCLA seniors or recent graduates are invited to apply for a British Marshall Scholarship. Marshall Scholarships finance young Americans of exceptional ability to study for a graduate degree in any discipline at any British University in the United Kingdom.</div>
+                  <div class="span8">This scholarship is awarded to outstanding UCLA Seniors or Recent Graduates to study for a graduate degree in any discipline at any British university in the United Kingdom.</div>
                 </div> 
               </div><!-- end -->
               <div class="scholarship-box"><!-- start -->
                 <div class="row-fluid">
                   <div class="span4"><a href="mitchell.html">Mitchell Scholarship</a></div>
-                  <div class="span8">For Seniors or Recent Graduates Interested in Graduate Study in Ireland</div>
+                  <div class="span8">For Seniors or Recent Graduates interested in graduate study in Ireland.</div>
                 </div> 
               </div><!-- end -->
               <div class="scholarship-box"><!-- start -->
                 <div class="row-fluid">
                   <div class="span4"><a href="thomas.html">The Thomas R. Pickering Foreign Affairs Fellowship</a></div>
-                  <div class="span8">The Fellowship is designed to attract outstanding individuals from all ethnic, racial and social backgrounds who have an interest in pursuing a Foreign Service career with the U.S. Department of State.</div>
+                  <div class="span8">The Thomas R. Pickering Foreign Affairs Fellowship is designed to attract outstanding individuals from all ethnic, racial, and social backgrounds who have an interest in pursuing a Foreign Service career with the U.S. Department of State.</div>
                 </div> 
               </div><!-- end -->
               <div class="scholarship-box"><!-- start -->
                 <div class="row-fluid">
                   <div class="span4"><a href="rhodes.html">Rhodes Scholarship</a></div>
-                  <div class="span8">For Seniors or Recent Graduates Interested in Graduate Study at Oxford University</div>
+                  <div class="span8">For Seniors or Recent Graduates interested in graduate study at Oxford University.</div>
                 </div> 
               </div><!-- end -->
               <div class="scholarship-box"><!-- start -->
                 <div class="row-fluid">
                   <div class="span4"><a href="paul.html">Paul and Daisy Soros Fellowships for New Americans</a></div>
-                  <div class="span8">Paul and Daisy Soros Fellowships for New Americans honors and supports the graduate educations of 30 New Americans – permanent residents or naturalized citizens if born abroad; otherwise children of naturalized citizen parents -- each year.   Fellows can study in any degree-granting program in any field at any university in the United States.  Selection is based on creativity, originality, initiative and sustained accomplishment.</div>
+                  <div class="span8">Paul and Daisy Soros Fellowships for New Americans honor and support the graduate educations of 30 New Americans (permanent residents or naturalized citizens if born abroad; otherwise children of naturalized citizen parents) each year. Fellows can study in any degree-granting program in any field at any university in the United States. Selection is based on creativity, originality, initiative, and sustained accomplishment.</div>
                 </div> 
               </div><!-- end -->
             </div>
