--- a/merit/juniors/index.html
+++ b/merit/juniors/index.html
@@ -345,7 +345,7 @@
               <div class="scholarship-box"><!-- start -->
                 <div class="row-fluid">
                   <div class="span4"><a href="beinecke.html">Beinecke Memorial Scholarship</a></div>
-                  <div class="span8">For Juniors planning graduate study in the Arts, Humanities, or Social Sciences</div>
+                  <div class="span8">For Juniors planning graduate study in the Arts, Humanities, or Social Sciences.</div>
                 </div> 
               </div><!-- end -->
               <div class="scholarship-box"><!-- start -->
@@ -356,38 +356,38 @@
               </div><!-- end -->
               <div class="scholarship-box"><!-- start -->
                 <div class="row-fluid">
-                  <div class="span4"><a href="fashion.html">Fashion Scholarship Fund (FSF)</a></div>
-                  <div class="span8">The YMA Fashion Scholarship Fund (FSF) grants scholarships to talented students and facilitates internships, mentorships, and career programs. Open Students of any major with a demonstrated interest in fashion.</div>
+                  <div class="span4"><a href="fashion.html">Fashion Scholarship Fund</a></div>
+                  <div class="span8">The YMA Fashion Scholarship Fund (FSF) grants scholarships to talented students interested in fashion and facilitates internships, mentorships, and career programs in the fashion industry. Open to students in any major who have a demonstrated interest in fashion.</div>
                 </div> 
               </div><!-- end -->
               <div class="scholarship-box"><!-- start -->
                 <div class="row-fluid">
                   <div class="span4"><a href="goldwater.html">Goldwater Scholarship</a></div>
-                  <div class="span8">For sophomores and juniors planning graduate study in Mathematics, Engineering, and the Sciences</div>
+                  <div class="span8">For Sophomores and Juniors interested in pursuing a new or continuing public service project.</div>
                 </div> 
               </div><!-- end -->
               <div class="scholarship-box"><!-- start -->
                 <div class="row-fluid">
                   <div class="span4"><a href="strauss.html">Strauss Scholarship Foundation Award</a></div>
-                  <div class="span8">For sophomores and juniors interested in pursuing a new or continuing public service project</div>
+                  <div class="span8">For Sophomores and Juniors interested in pursuing a new or continuing public service project.</div>
                 </div> 
               </div><!-- end -->
               <div class="scholarship-box"><!-- start -->
                 <div class="row-fluid">
-                  <div class="span4"><a href="udall.html">Udall Scholarships</a></div>
-                  <div class="span8">For Sophomores and Juniors interested in careers in Environmental Public Policy OR Tribal Public Policy OR Native American Health Care</div>
+                  <div class="span4"><a href="udall.html">Udall Scholarship</a></div>
+                  <div class="span8">For Sophomores and Juniors interested in careers in Environmental Public Policy or Tribal Public Policy or Native American Health Care.</div>
                 </div> 
               </div><!-- end -->
               <div class="scholarship-box"><!-- start -->
                 <div class="row-fluid">
                   <div class="span4"><a href="thomas.html">The Thomas R. Pickering Foreign Affairs Fellowship</a></div>
-                  <div class="span8">The Fellowship is designed to attract outstanding individuals from all ethnic, racial and social backgrounds who have an interest in pursuing a Foreign Service career with the U.S. Department of State.</div>
+                  <div class="span8">The Thomas R. Pickering Foreign Affairs Fellowship is designed to attract outstanding individuals from all ethnic, racial, and social backgrounds who have an interest in pursuing a Foreign Service career with the U.S. Department of State.</div>
                 </div> 
               </div><!-- end -->
               <div class="scholarship-box"><!-- start -->
                 <div class="row-fluid">
                   <div class="span4"><a href="truman.html">Truman Scholarship</a></div>
-                  <div class="span8">For juniors planning graduate study leading to careers in government or public service</div>
+                  <div class="span8">For Juniors planning graduate study leading to careers in government or public service.</div>
                 </div> 
               </div><!-- end -->
             </div>
