Massive re-wording
See Francesca's note on individual scholarships

--- a/merit/juniors/goldwater.html
+++ b/merit/juniors/goldwater.html
@@ -368,10 +368,10 @@
                 <div class="span12">
                 In order to be considered for UCLA nomination you must <br />
                 <ol>
-                  <li>Be a sophomore or junior pursuing a bachelor's degree on a full-time basis. "Sophomore" is defined as a student who plans two more years of full-time undergraduate study beginning September 2014. "Junior" is defined as a student who plans one more year of full-time undergraduate study beginning September 2014</li>
-                  <li>Be enrolled in an undergraduate field of study that will lead to a career in mathematics, the natural sciences, or engineering (please note: pre-med students are eligible only if planning to enter a joint MD/PhD program with the goal of a research rather than a clinical career) </li>
-                  <li>Have a college grade point average of at least 3.0 </li>
-                  <li>Be a U.S. citizen, a permanent resident, or a U.S. national </li>
+                  <li>Be a sophomore or junior pursuing a bachelor's degree on a full-time basis. "Sophomore" is defined as a student who plans two more years of full-time undergraduate study. "Junior" is defined as a student who plans one more year of full-time undergraduate study.</li>
+                  <li>Be enrolled in an undergraduate field of study that will lead to a career in mathematics, the natural sciences, or engineering (please note: pre-med students are eligible only if planning to enter a joint MD/PhD program with the goal of a research rather than a clinical career)</li>
+                  <li>Have a college grade point average of at least 3.0</li>
+                  <li>Be a U.S. citizen, a permanent resident, or a U.S. national</li>
                   <br />
                 </ol>
                 For more information, go to <a href="http://www.ugeducation.ucla.edu/honors/goldwater.html">http://www.ugeducation.ucla.edu/honors/goldwater.html</a>
