--- a/merit/juniors/truman.html
+++ b/merit/juniors/truman.html
@@ -360,7 +360,7 @@
                 <div class="span12">
                   In order to be considered for UCLA nomination you must:
                 <ol>
-                  <li>Be a junior pursuing a Bachelor's Degree during the 2013-14 academic year. "Junior" means a student who plans to continue full-time undergraduate study and who expects to receive a Bachelor's Degree between December 2014 and August 2015</li> 
+                  <li>Be a junior pursuing a Bachelor's Degree. "Junior" means a student who plans to continue full-time undergraduate study and who expects to receive a Bachelor's Degree the next academic year.</li> 
                   <li>Have demonstrated leadership ability, be committed to a career in government or public service, and plan to attend graduate school to prepare for a public service career</li>
                   <li>Have a 3.7 overall GPA or better</li>
                   <li>Be a U.S. citizen or a U.S. national</li>
