--- a/merit/juniors/udall.html
+++ b/merit/juniors/udall.html
@@ -369,7 +369,8 @@
                   <li>Demonstrate leadership and service</li>
                 </ol>
                 For more information, go to <br />
-                <a href="http://www.ugeducation.ucla.edu/honors/udall.html">http://www.ugeducation.ucla.edu/honors/udall.html</a>
+                <a href="http://www.ugeducation.ucla.edu/honors/udall.html">http://www.ugeducation.ucla.edu/honors/udall.html</a><br />
+                <a href="http://www.udall.gov/">http://www.udall.gov/</a>
 
                 </div>
               </div> 
