--- a/merit/seniors/churchill.html
+++ b/merit/seniors/churchill.html
@@ -343,7 +343,7 @@
               <div class="row-fluid">
                 <div class="span12">
                 	<p>
-                    The Churchill Scholarship funds one year of graduate study, beginning in Fall 2014, at Churchill College, University of Cambridge, England, leading to a certificate, diploma, or Master of Philosophy degree in engineering, mathematics, or the sciences. 
+                    The Churchill Scholarship funds one year of graduate study at Churchill College, University of Cambridge, England, leading to a certificate, diploma, or Master of Philosophy degree in engineering, mathematics, or the sciences.
                   </p>
                 </div>
               </div> 
