--- a/merit/seniors/mitchell.html
+++ b/merit/seniors/mitchell.html
@@ -343,7 +343,7 @@
               <div class="row-fluid">
                 <div class="span12">
                   <p>
-                    The Mitchell Scholarship finance one year of graduate study in any discipline at an institution of higher learning in Ireland or Northern Ireland beginning in Fall 2014.
+                    The Mitchell Scholarship finance one year of graduate study in any discipline at an institution of higher learning in Ireland or Northern Ireland.
                   </p>
                 </div>
               </div> 
