--- a/merit/seniors/thomas.html
+++ b/merit/seniors/thomas.html
@@ -352,7 +352,7 @@
               </div>
               <div class="row-fluid">
                 <div class="span12">
-                  Fellows will receive financial support of up to $40,000 annually (as of 2014) for:
+                  Fellows will receive financial support of up to $40,000 annually for:
                   <ul>
                     <li>Tuition costs (first priority)</li>
                     <li>Room and board</li>
