--- a/merit/sophomores/udall.html
+++ b/merit/sophomores/udall.html
@@ -352,12 +352,7 @@
               </div>
               <div class="row-fluid">
                 <div class="span12">
-                $5,000 per year to cover eligible expenses for tuition, fees, books, room and board.
-                <ul>
-                  <li>$8,000 for a summer program (special initiative for STEM students only; 8 weeks minimum)</li>
-                  <li>$10,000 for a semester</li>
-                  <li>$20,000 for a full academic year</li>
-                </ul>
+                Up to $5,000 for tuition, room and board, or other educational expenses.
                 </div>
               </div> 
               <div class="row-fluid">
@@ -374,7 +369,8 @@
                   <li>Demonstrate leadership and service</li>
                 </ol>
                 For more information, go to <br />
-                <a href="http://www.ugeducation.ucla.edu/honors/udall.html">http://www.ugeducation.ucla.edu/honors/udall.html</a>
+                <a href="http://www.ugeducation.ucla.edu/honors/udall.html">http://www.ugeducation.ucla.edu/honors/udall.html</a><br />
+                <a href="http://www.udall.gov/">http://www.udall.gov/</a>
 
                 </div>
               </div> 
