--- a/merit/seniors/marshall.html
+++ b/merit/seniors/marshall.html
@@ -343,7 +343,7 @@
               <div class="row-fluid">
                 <div class="span12">
                 	<p>
-                    Outstanding UCLA seniors or recent graduates are invited to apply for a British Marshall Scholarship. Marshall Scholarships finance young Americans of exceptional ability to study for a graduate degree in any discipline at any British University in the United Kingdom. Up to 40 scholarships will be awarded in November 2013 to cover the cost of two years of study beginning in Fall 2014.
+                    Outstanding UCLA seniors or recent graduates are invited to apply for a British Marshall Scholarship. Marshall Scholarships finance young Americans of exceptional ability to study for a graduate degree in any discipline at any British University in the United Kingdom. Up to 40 scholarships will be awarded to cover the cost of two years of study.
                   </p>
                 </div>
               </div> 
@@ -352,7 +352,7 @@
               </div>
               <div class="row-fluid">
                 <div class="span12">
-                The award covers all reasonable educational costs, a personal allowance for living expenses, and travel to and from the United States.
+                  The award covers all reasonable educational costs, a personal allowance for living expenses, and travel to and from the United States.
                 </div>
               </div> 
               <div class="row-fluid">
@@ -360,12 +360,12 @@
               </div>
               <div class="row-fluid">
                 <div class="span12">
-                  An applicant must be nominated by UCLA and: 
+                  An applicant must be nominated by UCLA and:
                 <ol>
-                  <li>be a citizen of the United States </li>
+                  <li>be a citizen of the United States</li>
                   <li>have an overall grade point average of at least 3.7</li>
-                  <li>have graduated from their undergraduate college or university after April 2011</li>
-                  <li>by the beginning of Fall 2014, hold a Bachelor's Degree from an accredited college or university in the United States</li>
+                  <li>have graduated from their undergraduate college or university after April that academic year</li>
+                  <li>by the beginning of the next academic year, hold a Bachelor's Degree from an accredited college or university in the United States</li>
                   <li>have a demonstrated record of academic excellence, leadership, and service</li>
                 </ol>
                 For more information, go to <br />
