--- a/merit/seniors/rhodes.html
+++ b/merit/seniors/rhodes.html
@@ -354,7 +354,7 @@
               </div>
               <div class="row-fluid">
                 <div class="span12">
-                Thirty-two scholarships were awarded in November 2013 to American students to cover the cost of study for one, two, or three years at Oxford University to begin in Fall 2014.
+                  Thirty-two scholarships are awarded each year to American students to cover the cost of study for one, two, or three years at Oxford University.
                 </div>
               </div> 
               <div class="row-fluid">
@@ -369,7 +369,9 @@
                   <li>have a demonstrated record of academic excellence, leadership, and service</li>
                 </ol>
                 For more information, go to <br />
-                <a href="http://www.ugeducation.ucla.edu/honors/rhodes.html">http://www.ugeducation.ucla.edu/honors/rhodes.html</a><br /><br />
+                <a href="http://www.ugeducation.ucla.edu/honors/rhodes.html">http://www.ugeducation.ucla.edu/honors/rhodes.html</a><br />
+                <a href="http://www.rhodesscholar.org/">http://www.rhodesscholar.org/</a>
+                <br />
                 </div>
               </div> 
             </div>
