--- a/home/index.html
+++ b/home/index.html
@@ -342,7 +342,7 @@
               </div>
               <div class="span6">
                 <h4>More Info</h4>
-                <a class="btn btn-gold btn-large btn-block">FAQ</a>
+                <a class="btn btn-gold btn-large btn-block" href="../faq/index.html">FAQ</a>
               </div>
             </div>
           </div>
